# backend-project-boilerplate

./: .env  .gitignore  README.md  docker-compose.yml
backend/: backend.dockerfile
backend/app/: .gitignore  alembic.ini  prestart.sh  pyproject.toml
backend/app/app/: main.py
backend/app/app/alembic/: env.py
backend/app/app/api/: api.py  deps.py
backend/app/app/api/endpoints/: sample.py
backend/app/app/core/: config.py
backend/app/app/crud/: base.py
backend/app/app/db/: base.py  init_db.py
backend/app/app/schemas/: sample.py
